Add ListIterator and subList ListIterator modification tests.